Use makegraaljdk in packaging